k8s/1.4/task2/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 8080  # Важно: multitool слушает 8080
    protocol: TCP
